@@ -82,6 +82,8 @@ Core and Builtins
 Library
 -------
 
+- Restore Python 2.3 compatibility for decimal.py.
+
 - Issue #3638: Remove functions from _tkinter module level that depend on
   TkappObject to work with multiple threads.
 
